--- a/EBD/evenbetterdeal-Info.plist
+++ b/EBD/evenbetterdeal-Info.plist
@@ -15,6 +15,9 @@
 			<key>CFBundleIconFiles</key>
 			<array>
 				<string>scale-114x114.png</string>
+				<string>scale-57x57.png</string>
+				<string>scale-144x144.png</string>
+				<string>scale-72x72.png</string>
 			</array>
 		</dict>
 	</dict>
@@ -49,9 +52,6 @@
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
