before going to EBD5 for refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ js
 .DS_Store
 .*.swp
 *.swp
-evenbetterdeal.xcodeproj/xcuserdata/
+EvenBetterDeal.xcodeproj/xcuserdata/
+UserInterfaceState.xcuserstate
