Fixed fonts for iPad and BundleID... it's case sensitive, wow.

--- a/EBD/EvenBetterDeal-Info.plist
+++ b/EBD/EvenBetterDeal-Info.plist
@@ -34,7 +34,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>EBD4.20130617</string>
+	<string>20130619</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
