--- a/ItsAGoodDeal.entitlements
+++ b/ItsAGoodDeal.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.focusedforsuccess.evenbetterdeal</string>
+		<string>$(AppIdentifierPrefix)com.focusedforsuccess.ItsAGoodDeal</string>
 	</array>
 </dict>
 </plist>
