added ItsAGoodDeal.xcodeproj/xcuserdata/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ js
 .DS_Store
 .*.swp
 *.swp
-EvenBetterDeal.xcodeproj/xcuserdata/
-UserInterfaceState.xcuserstate
+UserInterfaceState.xcuserstate/
+ItsAGoodDeal.xcodeproj/xcuserdata/
